--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,10 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
-//无需再单独引用tinker的其他库
+        //无需再单独引用tinker的其他库
         classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:${TINKERPATCH_VERSION}"
+        //多渠道打包
+        classpath 'com.meituan.android.walle:plugin:1.1.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
